--- a/index.html
+++ b/index.html
@@ -49,14 +49,19 @@
             }
 
             try {
-                const response = await fetch('https://openrouter.ai/api/v1/chat/completions', {
+                // CORS proxy URL'i
+                const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
+                const apiUrl = 'https://openrouter.ai/api/v1/chat/completions';
+
+                const response = await fetch(proxyUrl + apiUrl, {
                     method: 'POST',
                     headers: {
-                        'Authorization': 'Bearer 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',
+                        'Authorization': 'Bearer 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',
                         'Content-Type': 'application/json',
                         'HTTP-Referer': 'https://randomatti.github.io/',
                         'X-Title': 'DeepSeek Response',
-                        'OR-API-KEY': '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'
+                        'OR-API-KEY': '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',
+                        'Origin': 'https://randomatti.github.io'
                     },
                     body: JSON.stringify({
                         model: 'deepseek/deepseek-r1-zero:free',
@@ -65,30 +70,33 @@
                                 role: 'user',
                                 content: decodeURIComponent(userMessage)
                             }
-                        ]
+                        ],
+                        temperature: 0.7,
+                        max_tokens: 1000
                     })
                 });
 
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+
                 const data = await response.json();
                 
-                // API yanıtını kontrol et
                 let aiResponse = "API yanıtı alınamadı";
                 if (data && data.choices && data.choices.length > 0 && data.choices[0].message) {
                     aiResponse = data.choices[0].message.content;
                 } else if (data.error) {
                     aiResponse = `API Hatası: ${data.error.message}`;
                 }
-                
-                // Format the response
+
                 const apiResponse = {
-                    durum: response.ok ? "Bağlantı Başarılı" : "Bağlantı Başarısız",
-                    mesaj: userMessage,
+                    durum: "Bağlantı Başarılı",
+                    mesaj: decodeURIComponent(userMessage),
                     deepthink: "<thinking>AI düşünüyor...</thinking>",
                     response: aiResponse,
                     telegram: "https://t.me/ClonicGlobal"
                 };
 
-                // Display the response
                 document.getElementById('responseContainer').innerHTML = `
                     <h2>API Response</h2>
                     <pre>${JSON.stringify(apiResponse, null, 2)}</pre>
@@ -97,10 +105,17 @@
                 `;
 
             } catch (error) {
+                const errorResponse = {
+                    durum: "Bağlantı Başarısız",
+                    mesaj: decodeURIComponent(userMessage),
+                    deepthink: "<thinking>Bağlantı hatası</thinking>",
+                    response: `Hata: ${error.message}`,
+                    telegram: "https://t.me/ClonicGlobal"
+                };
+
                 document.getElementById('responseContainer').innerHTML = `
                     <h2>Error</h2>
-                    <pre>Error: ${error.message}</pre>
-                    <p>Please check your API key and connection.</p>
+                    <pre>${JSON.stringify(errorResponse, null, 2)}</pre>
                 `;
             }
         }
