--- a/index.html
+++ b/index.html
@@ -10,25 +10,61 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
+            background-color: #f5f5f5;
+        }
+        .container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         .form-group {
             margin-bottom: 15px;
         }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        .form-group input {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
         #profileImage {
             max-width: 320px;
             margin-top: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         #status {
             margin-top: 10px;
             padding: 10px;
+            border-radius: 4px;
         }
         .success {
-            color: green;
-            background: #e8f5e9;
+            color: #155724;
+            background-color: #d4edda;
+            border: 1px solid #c3e6cb;
         }
         .error {
-            color: red;
-            background: #ffebee;
+            color: #721c24;
+            background-color: #f8d7da;
+            border: 1px solid #f5c6cb;
         }
         .modal {
             display: none;
@@ -39,6 +75,7 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0,0,0,0.5);
+            overflow-y: auto;
         }
         .modal-content {
             background-color: #fefefe;
@@ -46,8 +83,9 @@
             padding: 20px;
             border: 1px solid #888;
             width: 80%;
-            max-width: 500px;
-            border-radius: 5px;
+            max-width: 600px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
         .close-modal {
             color: #aaa;
@@ -55,37 +93,51 @@
             font-size: 28px;
             font-weight: bold;
             cursor: pointer;
+            line-height: 20px;
         }
         .close-modal:hover {
-            color: black;
+            color: #000;
         }
         .error-details {
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #f8f8f8;
-            border: 1px solid #ddd;
+            margin-top: 15px;
+            padding: 15px;
+            background-color: #f8f9fa;
+            border: 1px solid #dee2e6;
             border-radius: 4px;
             font-family: monospace;
             white-space: pre-wrap;
             word-wrap: break-word;
+            font-size: 14px;
+            max-height: 300px;
+            overflow-y: auto;
+        }
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #444;
+            margin-top: 0;
         }
     </style>
 </head>
 <body>
-    <h1>Profile Manager</h1>
-    <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" required>
-        <button onclick="saveProfile()">Save Profile</button>
+    <div class="container">
+        <h1>Profile Manager</h1>
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" required placeholder="Enter username">
+            <button onclick="saveProfile()">Save Profile</button>
+        </div>
+        <div id="status"></div>
+        <img id="profileImage" style="display: none;" alt="Profile Image">
     </div>
-    <div id="status"></div>
-    <img id="profileImage" style="display: none;">
 
     <!-- Error Modal -->
     <div id="errorModal" class="modal">
         <div class="modal-content">
             <span class="close-modal" onclick="closeErrorModal()">&times;</span>
-            <h2>Console Error</h2>
+            <h2>Error Details</h2>
             <div id="errorMessage"></div>
             <div id="errorDetails" class="error-details"></div>
         </div>
